crates/test-files/fixtures/compile_errors/unsafe_nesting.fe
unsafe fn f() {
    unsafe { g() }
}

fn g() {
    unsafe {
        h()
        unsafe { h() }
    }
}

fn h() {}
